# disambiguate_quantifier_scope

./: LICENSE  README.md  pyproject.toml  requirements.txt
conf/: herbert_large_params.yaml  herbert_params.yaml  regression_lex.yaml  regression_ord.yaml  regression_role.yaml
src/: classifier.py  cross_validation.py  data_preprocessing.py  herbert.py  pydantic_models.py  regression.py  run.py  sampler.py  statistic_class.py  utils.py
